<resources>
    <string name="app_name">MY FOOD</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_favourite">Favourite</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">H I</string>
    <string name="login">Login</string>
    <string name="signupwithemail">Sign Up With Email</string>
    <string name="oruse">ـــــــــــــــ          or use social sign up          ـــــــــــــــ</string>
    <string name="withgoogle">Continue With Google</string>
    <string name="withface">Continue With Facebook</string>
    <string name="haveaccount">Already have account?</string>
    <string name="withtwitter">Continue with Twitter</string>
    <string name="logi">Log in</string>
    <string name="msglogin">Welcome back you\'re just a tap away from somthing delicious.</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="myfoodplan">My Food Planner</string>
    <string name="skip">Skip</string>
    <string name="arae">Country</string>
    <string name="category">Category</string>
    <string name="Ingredient">Ingredients</string>
    <string name="SearchBy">Search By </string>
    <string name="searchbycountry">Search by Country</string>
    <string name="instractions">Instractions</string>
    <string name="dailyinspiration">Daily Inspiration</string>
    <string name="youmightlike">You MIGHT Like</string>
    <string name="meal">Meal</string>
    <string name="Nomealhasbeenadeded">No Meals has Been Added</string>
    <string name="DayOne">Sunday</string>
    <string name="daytwo">Monday</string>
    <string name="daythree">Tuesday</string>
    <string name="dayfour">Wednesday</string>
    <string name="dayfive">Thursday</string>
    <string name="daySix">Friday</string>
    <string name="DaySeven">Saturday</string>
    <string name="logout">Log Out</string>
    <string name="ADD">Add</string>
    <string name="cancle">Cancle</string>
    <string name="day1">Sunday</string>
    <string name="day2">Monday</string>
    <string name="day3">Tuesday</string>
    <string name="day4">Wednesday</string>
    <string name="day5">Thursday</string>
    <string name="day6">Friday</string>
    <string name="day7">Saturday</string>
    <string name="confirmation">Confirmation</string>
    <string name="areyousure">Are You Sure? This Meal Will be Deleted.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="logoutmessage">Are you sure you want to log out?</string>
    <string name="loginmessage">Join To Us And Get Your Meal Plan</string>
    <string name="loginfirst">Join To Us And Get Your Meal Plan</string>
    <string name="nointernetmessage">No Connection Reconnect And Try Again</string>
    <!-- Strings used for fragments for navigation -->


</resources>